--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <p>En nuestro día a día nos encontramos con dos formas habituales de trabajar. Por un lado está la empresa que nos requiere para trabajos.</p>
         <button onclick="location.href='pages/servicios.html'">Leer más</button>
 
+        <h2>Nuestro cliente</h2>
+        <a href="https://agora.xtec.cat/ienoudebadalona/"><div class="logo_cliente"><img src="img/logo_cliente.png"></div></a>
+
   		</div>
 
   	</article>
@@ -59,6 +62,6 @@
 
   <footer id="main-footer">
   	<p>Diseñado por AIO. &nbsp; &nbsp; Tel: *** ** ** ** &nbsp; &nbsp; email: aio@aio.com</p>
-  </footer>
+  </footer><!-- / #main-footer -->
 </body>
 </html>
