--- a/pages/Ubicación.html
+++ b/pages/Ubicación.html
@@ -35,9 +35,13 @@
   	<article>
   		<header>
   			<h1>¿Dónde nos puedes encontrar?</h1>
+        <p>Las oficinas de nuestra empresa estarán en un complejo de oficinas en un edificio llamado “All In One”.</p>
+        <p>Dirección: Carrer de Muntaner, 70, 08917 Badalona, Barcelona</p>
+        <p>Dada la importancia de la protección de los servidores, en el lugar se tienen todos los servicios de comunicación, seguridad garantizada las 24 horas del día.</p>
+
+        <center><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2990.001628679377!2d2.2342912174438476!3d41.46088000000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4bb9da29c718b%3A0xeb615cd61423cf73!2sCarrer%20de%20Muntaner%2C%2070%2C%2008917%20Badalona%2C%20Barcelona!5e0!3m2!1ses!2ses!4v1653007362707!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></center>
   		</header>
 
-  		<img src="../img/logo_AIO.png">
 
       <span class="ir-arriba icon-arrow-up"></span>
   		<div class="content">
