--- a/pages/Contáctanos.html
+++ b/pages/Contáctanos.html
@@ -36,8 +36,30 @@
   		<header>
   			<h1>Contáctanos</h1>
   		</header>
-
-  		<img src="../img/logo_AIO.png">
+      <p>Estamos las 24h disponibles para ayudarte y poder resolver tus dudas. Por favor rellene éste pequeño formulario comentando las dudas qué tienes y nosotros nos encargaremos de atenderte lo más rápido posible.</p>
+      <?php
+  $action=$_REQUEST['action'];
+  if ($action=="")    /* display the contact form */
+      {
+      ?>
+  <form  action="" method="POST" enctype="multipart/form-data">
+  <input type="hidden" name="action" value="submit">
+  Your name:<br>
+  <input name="name" type="text" value="" size="30"/><br>
+  Your email:<br>
+  <input name="email" type="text" value="" size="30"/><br>
+  Your message:<br>
+  <textarea name="message" rows="7" cols="30"></textarea><br>
+  <input type="submit" value="Send email"/>
+  </form>
+      <?php
+      }
+  else                /* send the submitted data */
+      {
+      $name=$_REQUEST['name'];
+      $email=$_REQUEST['email'];
+      $message=$_REQUEST['message'];
+      if (($name=="")||($email=="")||($message==""))
 
       <span class="ir-arriba icon-arrow-up"></span>
   		<div class="content">
